--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "purescript-control": "^3.0.0",
     "purescript-machines": "^4.0.0",
     "purescript-unsafe-coerce": "^3.0.0",
-    "purescript-exists": "^3.0.0"
+    "purescript-exists": "^3.0.0",
+    "purescript-leibniz": "^4.0.0"
   },
   "devDependencies": {
     "purescript-aff": "^3.0.0"
