--- a/bower.json
+++ b/bower.json
@@ -9,10 +9,12 @@
   "license": "MIT",
   "dependencies": {
     "purescript-control": "^3.0.0",
-    "purescript-machines": "^4.0.0",
-    "purescript-unsafe-coerce": "^3.0.0",
+    "purescript-catenable-lists": "^4.0.0",
     "purescript-exists": "^3.0.0",
-    "purescript-leibniz": "^4.0.0"
+    "purescript-transformers": "^3.0.0",
+    "purescript-unsafe-coerce": "^3.0.0",
+    "purescript-leibniz": "^4.0.0",
+    "purescript-sequences": "git://github.com/syaiful6/purescript-sequences.git#5d6d834"
   },
   "devDependencies": {
     "purescript-aff": "^3.0.0"
