--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,7 @@
     "purescript-exists": "^3.0.0",
     "purescript-transformers": "^3.0.0",
     "purescript-unsafe-coerce": "^3.0.0",
-    "purescript-leibniz": "^4.0.0",
-    "purescript-sequences": "git://github.com/syaiful6/purescript-sequences.git#5d6d834"
+    "purescript-leibniz": "^4.0.0"
   },
   "devDependencies": {
     "purescript-aff": "^3.0.0"
